Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/parser": "latest",
     "@vitalets/google-translate-api": "^8.0.0",
     "@whiskeysockets/baileys": "github:TheGetsuzoZhiro/Baileys",
-    "arcloud": "^1.4.0",
+    "acrcloud": "^1.4.0",
     "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
     "axios": "^0.24.0",
     "cfonts": "latest",
