--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@babel/parser": "latest",
     "@vitalets/google-translate-api": "^8.0.0",
-    "@whiskeysockets/baileys": "github:TheGetsuzoZhiro/Baileys",
+    "@whiskeysockets/baileys": "github:Ado21/BailMod",
     "acrcloud": "^1.4.0",
     "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
     "axios": "^0.24.0",
@@ -37,7 +37,7 @@
     "gradient-string": "^2.0.2",
     "grapheme-splitter": "^1.0.4",
     "human-readable": "^0.2.1",
-    "jimp": "^0.16.1",
+    "jimp": "latest",
     "lodash": "latest",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
